spacing issue for mobile

--- a/docroot/themes/cypress_store/less/style.less
+++ b/docroot/themes/cypress_store/less/style.less
@@ -620,7 +620,7 @@ footer{
 	    right: 5px;
 	}
 	.icons ul a img:first-child {
-	    margin-right: 9px;
+	    margin-right: 12px;
 	}
 	.icons ul li a img {
 	    margin-right: 0 !important;
@@ -819,7 +819,8 @@ footer{
 	    list-style-type: none;
 	    display: inline-block;
 	    width: 40px;
-	    margin-left: 8px;
+	    margin-left: 5px;
+	    margin-right: 3px;
 	}
 	.icons img {
 	    width: 30px;
@@ -830,6 +831,9 @@ footer{
 	.icons a:first-child{
 		float: left;
 		clear: both;
+	}
+	a.user-icon {
+	    float: right !important;
 	}
 	.mobile-menu li {
 	    width: auto !important;
